# twitch-log-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  config-example.json  docker-compose.yml
src/: main.rs
src/lib/: commands.rs  config.rs  db.rs  error.rs  file.rs  message.rs  mod.rs
