[package]
name = "twitch-log-bot"
version = "0.1.0"
authors = ["smehlhoff"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
indicatif = "0.16.2"
irc = "0.13.6"
lazy_static = "1.4.0"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
regex = "1.5.4"
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.73"
timeago = "0.3.0"